Issue #3369: fix memory leak in floatobject.c.  Thanks Kristján Jónsson for the report and fix.